snapping fail he first time with orientation option in face/closest mode #48404

Closed
opened 2016-05-11 20:55:00 +02:00 by mathieu menuet · 13 comments

System Information
Win7 x64

Blender Version
Broken: 2.77a

Short description of error
The first snap fails when translating an object with snap to face/closest and orientation option activated. The second snap on the same face work.

Exact steps for others to reproduce the error

bug snap orient closest face.blend

  • Open attached blend file.
  • in the left 3D view, hit G and press ctrl to snap onto the face facing the view, look at the right 3D view window : there is still a big gab between the face and the snapped object

Do the exact same step again, now it works.

**System Information** Win7 x64 **Blender Version** Broken: 2.77a **Short description of error** The first snap fails when translating an object with snap to face/closest and orientation option activated. The second snap on the same face work. **Exact steps for others to reproduce the error** [bug snap orient closest face.blend](https://archive.blender.org/developer/F310146/bug_snap_orient_closest_face.blend) - Open attached blend file. - in the left 3D view, hit G and press ctrl to snap onto the face facing the view, look at the right 3D view window : there is still a big gab between the face and the snapped object # Do the exact same step again, now it works.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bliblubli

Added subscriber: @bliblubli

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I would like to better understand this bug (since I could not redo).

@bliblubli, does you confirm the execution of the first snap (ENTER/LMB) or cancel it (ESC/RMB)?

I would like to better understand this bug (since I could not redo). @bliblubli, does you confirm the execution of the first snap (ENTER/LMB) or cancel it (ESC/RMB)?

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Maybe it's a good idea to change the orientation of the closest point just like the mesh.
I think this would be a more intuitive way to do the snap - closest with orientation.

@ideasman42, I let the idea then :)

Maybe it's a good idea to change the orientation of the closest point just like the mesh. I think this would be a more intuitive way to do the snap - closest with orientation. @ideasman42, I let the idea then :)
Author

Yes I have to confirm the first snap to be able to do a successful 2nd one. It looks like it first make the snap as if orientation option was not set and then do the rotation, breaking the snap instead of doing the rotation first and then snap to closest.

Yes I have to confirm the first snap to be able to do a successful 2nd one. It looks like it first make the snap as if orientation option was not set and then do the rotation, breaking the snap instead of doing the rotation first and then snap to closest.

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

@mont29, @ideasman42, is it some unsupported corner case or a real issue?

@mont29, @ideasman42, is it some unsupported corner case or a real issue?
Author

I tested to invert the steps in a py addon, doing the rotation to align to face first, then the snapping and it worked. So you just need to invert the translation and rotation steps.

I tested to invert the steps in a py addon, doing the rotation to align to face first, then the snapping and it worked. So you just need to invert the translation and rotation steps.
Campbell Barton self-assigned this 2016-07-28 07:42:36 +02:00

This issue was referenced by 5ecc6a824a

This issue was referenced by 5ecc6a824a184c96c30a19934b7bb1a16c431cfd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks, the fix works really well :)

Thanks, the fix works really well :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48404
No description provided.