Fix T48404: Translate fails w/ snap orientation option

Rotate the object around the snap-target so it meets the snap-point.